--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 	<meta name="msapplication-tap-highlight" content="no" />
 
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
 	<link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/C.png" />
 
 	<!-- add to homescreen for ios -->
