--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Cura</title>
+	<title>Safar</title>
 
 	<base href="/" />
 
@@ -15,7 +15,7 @@
 
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
-	<link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/C.png" />
+	<link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/fav.png" />
 
 	<!-- add to homescreen for ios -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
